# Ray-Tracing-with-Vulkan-and-Cuda-in-Cpp

./: .gitignore  .gitmodules  Application.cpp  CMakeLists.txt  Makefile  MangoHud.conf  README.md  conanfile.py  makefile
Source/: CMakeLists.txt  Neko.hpp
Source/Core/: BaseObjects.hpp  CMakeLists.txt  CoreDefines.hpp  CoreImage.cpp  CoreImage.hpp  CoreInternal.hpp  CoreNeko.hpp  DebugTimer.hpp  EngineConfigs.cpp  EngineConfigs.hpp  MacroUtils.hpp  Platforms.hpp  ThreadPool.cpp  ThreadPool.hpp  VKTemplates.cpp  VKTemplates.hpp
Source/Core/Common/: CMakeConfigs.hpp  Common.hpp  StdHeaders.hpp
Source/Core/Configs/: EngineConfigs.cpp  EngineConfigs.hpp
Source/Core/Logger/: DebugTimer.hpp  Logger.cpp  Logger.hpp
Source/Core/MacroUtils/: MacroUtils.hpp
Source/Core/SuperClasses/: LoadedEntity.hpp  MoveOnlyEntity.hpp
Source/Core/Threading/: ThreadPool.cpp  ThreadPool.hpp
Source/Core/Utils/: ImageLoader.cpp  ImageLoader.hpp
Source/Engine/: CMakeLists.txt  Engine.cpp  Engine.hpp
Source/Events/: CMakeLists.txt  Events.cpp  Events.hpp
Source/GUI/: CMakeLists.txt  GUI.cpp  GUI.hpp
Source/Interface/: CMakeLists.txt  Interface.hpp  Linkages.hpp  UserDefines.hpp  UserEntry.hpp
Source/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  RendererModules.hpp
Source/Renderer/Basic/: Context.cpp  Context.hpp  Extensions.cpp  Extensions.hpp  Framebuffers.cpp  Framebuffers.hpp  Instance.cpp  Instance.hpp  Surface.cpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp  Synchronization.cpp  Synchronization.hpp  Window.cpp  Window.hpp
Source/Renderer/Commands/: Commands.cpp  Commands.hpp
Source/Renderer/Devices/: CMakeLists.txt  LogicalDevice.cpp  LogicalDevice.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Queues.hpp
Source/Renderer/Generic/: CMakeLists.txt  GenericRenderer.cpp  GenericRenderer.hpp  VulkanModules.hpp
Source/Renderer/Pipelines/: Compute.hpp  Graphics.cpp  Graphics.hpp  PipelineCache.cpp  PipelineCache.hpp  PipelineLayout.cpp  PipelineLayout.hpp  RenderPass.cpp  RenderPass.hpp  ShaderModules.cpp  ShaderModules.hpp  ShaderObjects.cpp  ShaderObjects.hpp
Source/Renderer/Resources/: Buffers.cpp  Buffers.hpp  CMakeLists.txt  Descriptors.cpp  Descriptors.hpp  Images.cpp  Images.hpp  ResourceUtils.cpp  ResourceUtils.hpp  Sampler.cpp  Sampler.hpp  UsageSpecific.cpp  UsageSpecific.hpp
Source/Renderer/Vulkan/: CMakeLists.txt
src/: CMakeLists.txt  ProxyFuncs.cpp  ProxyFuncs.hpp  Renderer.cpp  Utility.hpp  VulkanApp.hpp  buffer.cpp  command_pool.hpp  config.hpp  create_object.cpp  create_object.hpp  descriptor.hpp  destroy_object.cpp  destroy_object.hpp  device.cpp  device.hpp  get_list.cpp  get_list.hpp  instance.cpp  instance.hpp  make_info.cpp  make_info.hpp  neko.cpp  neko.hpp  resources.cpp  resources.hpp  sampler.cpp  sync.hpp  utility.hpp  validation_layers.cpp  validation_layers.hpp  vk_wrappers.hpp  vkh.cpp  vkh.hpp  vulkan_app.cpp  vulkan_app.hpp
src/basic/: command_pool.cpp  command_pool.hpp  device.cpp  device.hpp  instance.cpp  instance.hpp  swapchain.cpp  swapchain.hpp
src/buffer/: depth.cpp  depth.hpp  uniform.cpp  uniform.hpp
src/core/: CMakeLists.txt  cmake_configs.hpp  configs.cpp  configs.hpp  core.hpp  defines.hpp  image.cpp  image.hpp  platform.hpp  settings.cpp  settings.hpp  templates.cpp  templates.hpp  timer.hpp
src/engine/: CMakeLists.txt  engine.cpp  engine.hpp
src/events/: CMakeLists.txt  events.cpp  events.hpp
src/old/: ProxyFuncs.cpp  ProxyFuncs.hpp  Renderer.cpp  Renderer.hpp  Vertex.cpp  Vertex.hpp
src/renderer/: CMakeLists.txt  renderer.cpp  renderer.hpp
src/renderer/basic/: CMakeLists.txt  context.cpp  context.hpp  extensions.hpp  framebuffers.cpp  framebuffers.hpp  instance.cpp  instance.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  sync.cpp  sync.hpp  window.cpp  window.hpp
src/renderer/commands/: CMakeLists.txt  commands.cpp  commands.hpp
src/renderer/devices/: CMakeLists.txt  logical_device.cpp  logical_device.hpp  queues.hpp
src/renderer/pipelines/: CMakeLists.txt  compute.cpp  compute.hpp  graphics.cpp  graphics.hpp  layout.cpp  layout.hpp  pipeline_cache.cpp  pipeline_cache.hpp  pipeline_layout.cpp  pipeline_layout.hpp  render_pass.cpp  render_pass.hpp  shader_module.cpp  shader_module.hpp  shader_objects.cpp  shader_objects.hpp
src/renderer/resources/: CMakeLists.txt  buffer.cpp  buffer.hpp  depth_buffer.cpp  depth_buffer.hpp  descriptor.cpp  descriptor.hpp  image.cpp  image.hpp  sampler.cpp  sampler.hpp  uniform_buffer.cpp  uniform_buffer.hpp  usage_specific.cpp  usage_specific.hpp  utils.cpp  utils.hpp
src/rtvc/: buffer.hpp  compute_pipeline.cpp  compute_pipeline.hpp  descriptor.cpp  descriptor.hpp  device.cpp  device.hpp  framebuffers.cpp  framebuffers.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  image_view.cpp  image_view.hpp  instance.hpp  ray_tracing_pipeline.cpp  ray_tracing_pipeline.hpp  resources.hpp  sampler.cpp  sampler.hpp  swapchain.cpp  swapchain.hpp  vulkan_app.cpp  vulkan_app.hpp
src/settings/: settings.hpp
src/threads/: CMakeLists.txt  thread_pool.cpp  thread_pool.hpp  threads.cpp  threads.hpp
src/utils/: CMakeLists.txt  defines.hpp  json_utils.cpp  json_utils.hpp  platform.hpp  settings.cpp  settings.hpp  timer.hpp  utils.cpp  utils.hpp
src/vkc/: vkc.hpp
src/vkh/: command_buffers.cpp  commands.cpp  commands.hpp  config.hpp  create_object.cpp  create_object.hpp  destroy_object.cpp  destroy_object.hpp  get_list.cpp  get_list.hpp  make_info.cpp  make_info.hpp  structures.hpp  utility.hpp  validation_layers.cpp  vertex.hpp  vkh.cpp  vkh.hpp  wrapper.hpp
src/vkh/commands/: commands.hpp
src/vkh/layers/: validation_layers.hpp
src/vkh/structures/: structures.hpp
src/vkh/vk_objects/: create_object.hpp
src/vkw/: buffer.hpp  command.hpp  config.hpp  descriptor.hpp  device.hpp  framebuffer.hpp  imageview.hpp  surface.hpp  swapchain.hpp  vkw.hpp  window.hpp  wrappers.hpp
src/vkw/basic/: command.hpp  debug.hpp  descriptor.hpp  device.hpp  framebuffer.hpp  instance.hpp  sampler.hpp  surface.hpp  swapchain.hpp  window.hpp
src/vkw/command/: command_pool.hpp
(+116 files in other folders)
